--- a/_locales/ru/maqueen-strings.json
+++ b/_locales/ru/maqueen-strings.json
@@ -2,9 +2,9 @@
   "PingUnit.Centimeters|block": "см",
   "maqueen.Dir.CCW|block": "назад",
   "maqueen.Dir.CW|block": "вперед",
-  "maqueen.IR_callbackUser|block": "IR: при получении данных",
+  "maqueen.IR_callbackUser|block": "ИК: при получении данных",
   "maqueen.IR_read_version|block": "номер версии",
-  "maqueen.IR_read|block": "IR ключ-значение",
+  "maqueen.IR_read|block": "ИК значение",
   "maqueen.LED.LEDLeft|block": "слева",
   "maqueen.LED.LEDRight|block": "справа",
   "maqueen.LEDswitch.turnOff|block": "выкл",
@@ -18,17 +18,17 @@
   "maqueen.Patrol1.PatrolRight|block": "правый",
   "maqueen.Servos.S1|block": "S1",
   "maqueen.Servos.S2|block": "S2",
-  "maqueen.Ultrasonic|block": "ультрозвуковой сенсор |%unit ",
+  "maqueen.Ultrasonic|block": "ультрозвуковой датчик|%unit ",
   "maqueen.Voltage.High|block": "белый",
   "maqueen.Voltage.Low|block": "чёрный",
-  "maqueen.ltEvent|block": "когда|%value датчик следования линии |%vi",
+  "maqueen.ltEvent|block": "следование по линии|%value|%vi",
   "maqueen.motorRun|block": "мотор|%index|двигаться|%Dir|со скоростью|%speed",
-  "maqueen.motorStop|block": "остановить мотор |%motors",
+  "maqueen.motorStop|block": "мотор|%motors|остановить",
   "maqueen.readPatrol|block": "датчик следования линии|%patrol",
   "maqueen.servoRun|block": "сервопривод|%index|угол|%angle",
-  "maqueen.writeLED|block": "%led|лампочка|%ledswitch",
-  "maqueenIR.initIR|block": "подключить IR на %pin",
-  "maqueenIR.onPressEvent|block": "кнопка |%btn| нажата",
-  "maqueenIR|block": "maqueenIR",
+  "maqueen.writeLED|block": "лампочка|%led|%ledswitch",
+  "maqueenIR.initIR|block": "подключить ИК на %pin",
+  "maqueenIR.onPressEvent|block": "кнопка|%btn|нажата",
+  "maqueenIR|block": "MaqueenИК",
   "maqueen|block": "Maqueen"
 }
