Added Russian translations

--- a/_locales/ru/maqueen-strings.json
+++ b/_locales/ru/maqueen-strings.json
@@ -4,9 +4,9 @@
   "maqueen.Dir.CW|block": "вперед",
   "maqueen.IR_callbackUser|block": "ИК: при получении данных",
   "maqueen.IR_read_version|block": "номер версии",
-  "maqueen.IR_read|block": "ИК значение",
-  "maqueen.LED.LEDLeft|block": "слева",
-  "maqueen.LED.LEDRight|block": "справа",
+  "maqueen.IR_read|block": "код с ИК пульта",
+  "maqueen.LED.LEDLeft|block": "левая",
+  "maqueen.LED.LEDRight|block": "правая",
   "maqueen.LEDswitch.turnOff|block": "выкл",
   "maqueen.LEDswitch.turnOn|block": "вкл",
   "maqueen.Motors.All|block": "все",
@@ -24,7 +24,7 @@
   "maqueen.ltEvent|block": "следование по линии|%value|%vi",
   "maqueen.motorRun|block": "мотор|%index|двигаться|%Dir|со скоростью|%speed",
   "maqueen.motorStop|block": "мотор|%motors|остановить",
-  "maqueen.readPatrol|block": "датчик следования линии|%patrol",
+  "maqueen.readPatrol|block": "датчик следования по линии|%patrol",
   "maqueen.servoRun|block": "сервопривод|%index|угол|%angle",
   "maqueen.writeLED|block": "лампочка|%led|%ledswitch",
   "maqueenIR.initIR|block": "подключить ИК на %pin",
