Added Russian translations

--- a/_locales/ru/maqueen-strings.json
+++ b/_locales/ru/maqueen-strings.json
@@ -2,9 +2,9 @@
   "PingUnit.Centimeters|block": "см",
   "maqueen.Dir.CCW|block": "назад",
   "maqueen.Dir.CW|block": "вперед",
-  "maqueen.IR_callbackUser|block": "ИК: при получении данных",
+  "maqueen.IR_callbackUser|block": "ИК: при получении кода",
   "maqueen.IR_read_version|block": "номер версии",
-  "maqueen.IR_read|block": "код с ИК пульта",
+  "maqueen.IR_read|block": "ИК: код с пульта",
   "maqueen.LED.LEDLeft|block": "левая",
   "maqueen.LED.LEDRight|block": "правая",
   "maqueen.LEDswitch.turnOff|block": "выкл",
@@ -27,8 +27,8 @@
   "maqueen.readPatrol|block": "датчик следования по линии|%patrol",
   "maqueen.servoRun|block": "сервопривод|%index|угол|%angle",
   "maqueen.writeLED|block": "лампочка|%led|%ledswitch",
-  "maqueenIR.initIR|block": "подключить ИК на %pin",
-  "maqueenIR.onPressEvent|block": "кнопка|%btn|нажата",
+  "maqueenIR.initIR|block": "ИК: подключить к|%pin",
+  "maqueenIR.onPressEvent|block": "ИК: кнопка|%btn|нажата",
   "maqueenIR|block": "Maqueen ИК",
   "maqueen|block": "Maqueen",
   "{id:category}Maqueen": "Maqueen",
