Added Russian translations

--- a/_locales/ru/maqueen-jsdoc-strings.json
+++ b/_locales/ru/maqueen-jsdoc-strings.json
@@ -1,12 +1,12 @@
 {
-  "maqueen.IR_read": "Получает код с инфрокрасного пульта.",
-  "maqueen.IR_read_version": "Получает номер версии.",
+  "maqueen.IR_read": "Код с инфрокрасного пульта.",
+  "maqueen.IR_read_version": "Номер версии робота.",
   "maqueen.IR_callbackUser": "Выполняет действия при получении с пульта кода нажатой кнопки",
-  "maqueen.Ultrasonic": "Возвращает значение с ультразвукового датчика.",
-  "maqueen.ltEvent": "Выполняет действия при приходе события с датчика следования по линии.",
+  "maqueen.Ultrasonic": "Значение с ультразвукового датчика.",
+  "maqueen.ltEvent": "Выполняет действия при приходе определённого цвета с указанного датчика следования по линии.",
   "maqueen.motorRun": "Устанавливает направление и скорость мотора.",
   "maqueen.motorStop": "Останавливает мотор.",
-  "maqueen.readPatrol": "Получает значение с датчика следования по линии.",
+  "maqueen.readPatrol": "Значение с датчика следования по линии.",
   "maqueen.servoRun": "Поворачивает сервопривод на определенный угол.",
   "maqueen.writeLED": "Включает/выключает лампочки.",  
   "maqueenIR.initIR": "Подключает инфракрасный приёмник команд с пульта к выбранному порту",
